Refactor multiple input and label ids with the same value

--- a/02-color-generator/index.html
+++ b/02-color-generator/index.html
@@ -47,20 +47,20 @@
   </section>
   <section>
     <div>
-      <label for="insert-color">Escolha uma cor:</label>
-      <input type="text" id="insert-color">
+      <label for="insert-color-1">Escolha uma cor:</label>
+      <input type="text" id="insert-color-1">
     </div>
     <div>
-      <label for="insert-color">Escolha uma cor:</label>
-      <input type="text" id="insert-color">
+      <label for="insert-color-2">Escolha uma cor:</label>
+      <input type="text" id="insert-color-2">
     </div>
     <div>
-      <label for="insert-color">Escolha uma cor:</label>
-      <input type="text" id="insert-color">
+      <label for="insert-color-3">Escolha uma cor:</label>
+      <input type="text" id="insert-color-3">
     </div>
     <div>
-      <label for="insert-color">Escolha uma cor:</label>
-      <input type="text" id="insert-color">
+      <label for="insert-color-4">Escolha uma cor:</label>
+      <input type="text" id="insert-color-4">
     </div>
   </section>
   <script>
