Refactor starter image name on index file

--- a/03-cute-cat/index.html
+++ b/03-cute-cat/index.html
@@ -63,7 +63,7 @@
   <section>
     <div>
       <!-- Accreding the author: <a href="http://www.freepik.com">Designed by Freepik</a> -->
-      <img src="img/cats_01.jpg" alt="Cute cat in different positions">
+      <img src="img/cat_01.jpg" alt="Cute cat in different positions">
     </div>
     <div>
       <p>"Vem brincar comigo!"</p>
