Refactor image file names in the script session of index

--- a/03-cute-cat/index.html
+++ b/03-cute-cat/index.html
@@ -76,20 +76,20 @@
     const image = document.querySelector('img');
 
     catDialogues[0].addEventListener('mouseover', function () {
-      image.src = 'img/cats_02.jpg';
+      image.src = 'img/cat_02.jpg';
     });
 
     catDialogues[1].addEventListener('mouseover', function () {
-      image.src = 'img/cats_03.jpg';
+      image.src = 'img/cat_03.jpg';
     });
 
     catDialogues[2].addEventListener('mouseover', function () {
-      image.src = 'img/cats_04.jpg';
+      image.src = 'img/cat_04.jpg';
     });
 
     for (let index = 0; index < catDialogues.length; index += 1) {
       catDialogues[index].addEventListener('mouseout', function () {
-        image.src = 'img/cats_01.jpg';
+        image.src = 'img/cat_01.jpg';
       });
     }
   </script>
