Add a h2 indicating the dialogue block to the user

--- a/03-cute-cat/index.html
+++ b/03-cute-cat/index.html
@@ -66,6 +66,7 @@
       <img src="img/cat_01.jpg" alt="Cute cat in different positions">
     </div>
     <div>
+      <h2>Minhas falas</h2>
       <p>"Vem brincar comigo!"</p>
       <p>"Tô de olho em você, hein?"</p>
       <p>"Joga o meu ratinho de pelúcia, pessoa!"</p>
