Refactor file name from pink to violet-bandage, refactor code to include said image

--- a/04-fix-ship-holes/index.html
+++ b/04-fix-ship-holes/index.html
@@ -60,7 +60,7 @@
     }
 
     .bandages div:nth-child(3) {
-      background-image: url(img/pink-bandage.png);
+      background-image: url(img/violet-bandage.png);
     }
   </style>
   <title>Fix the ship's holes</title>
