Add alt property to all images

--- a/04-fix-ship-holes/index.html
+++ b/04-fix-ship-holes/index.html
@@ -55,14 +55,14 @@
 <body>
   <h1>Escolha um curativo e tape os buracos!</h1>
   <section>
-    <img class="hole" src="img/hole.png" alt="">
-    <img class="hole" src="img/hole.png" alt="">
-    <img class="hole" src="img/hole.png" alt="">
+    <img class="hole" src="img/hole.png" alt="Hole in ship's hull">
+    <img class="hole" src="img/hole.png" alt="Hole in ship's hull">
+    <img class="hole" src="img/hole.png" alt="Hole in ship's hull">
   </section>
   <section class="bandages">
-    <img src="img/green-bandage.png" alt="">
-    <img src="img/red-bandage.png" alt="">
-    <img src="img/violet-bandage.png" alt="">
+    <img src="img/green-bandage.png" alt="Green bandage">
+    <img src="img/red-bandage.png" alt="Red bandage">
+    <img src="img/violet-bandage.png" alt="Violet bandage">
   </section>
   <script>
     const holes = document.querySelectorAll('.hole');
