Add sunrise and sunset css classes

--- a/extra-activity-sundial/index.html
+++ b/extra-activity-sundial/index.html
@@ -39,12 +39,12 @@
       align-self: flex-start;
     }
 
-    .quadrant > img {
+    .quadrant>img {
       border-radius: 50%;
       height: 200px;
     }
 
-    section > img {
+    section>img {
       height: 100px;
     }
 
@@ -55,6 +55,14 @@
 
     button {
       padding: 10px;
+    }
+
+    .sunrise {
+      background: linear-gradient(to top, #58151A, #BC2909, #BA6D09, #71A8EE, #3072EB, #1552C6, #0542A8);
+    }
+
+    .sunset {
+      background: linear-gradient(to top, #040308, #AD4A28, #DD723C, #FC7001, #DCB697, #9BA5AE, #3E5879, #020B1A);
     }
   </style>
   <title>Relógio solar</title>
