--- a/extra-activity-sundial/index.html
+++ b/extra-activity-sundial/index.html
@@ -77,7 +77,7 @@
 
 <body>
   <h1>Relógio solar</h1>
-  <section class="sky midday">
+  <section class="sky night">
     <div class="quadrant"></div>
     <div class="quadrant"></div>
     <div class="quadrant"></div>
@@ -119,10 +119,10 @@
     button.addEventListener('click', function () {
       const image = document.createElement('img');
       image.src = sun;
-      position += 1;
-      changeSkyColor(position);      
+      position = position > 1 ? 0 : position + 1;
+      changeSkyColor(position);
       quadrants[position].appendChild(image);
-    })
+    });
   </script>
 </body>
 
