Change sundial picture file

--- a/extra-activity-sundial/index.html
+++ b/extra-activity-sundial/index.html
@@ -84,7 +84,7 @@
   </section>
   <section>
     <button>Avançar</button>
-    <img src="img/sundial.svg" alt="Sundial">
+    <img src="img/sundial.png" alt="Sundial">
     <div>
       <label for="time">Relógio moderno:</label>
       <input type="time" id="time">
