Add activity 1: time traveler

--- a/01-time-traveler/index.html
+++ b/01-time-traveler/index.html
@@ -61,7 +61,7 @@
     </p>
   </section>
   <section>
-    <button>Sexta-feira 13</button>
+    <button>Halloween</button>
     <button>Velho oeste</button>
     <button>Roma antiga</button>
     <button>Quinta série</button>
