Fix ship's activity starting click value to be that of hole image

--- a/04-fix-ship-holes/index.html
+++ b/04-fix-ship-holes/index.html
@@ -67,7 +67,7 @@
   <script>
     const holes = document.querySelectorAll('.hole');
     const bandages = document.querySelectorAll('.bandages');
-    let selectedBandage;
+    let selectedBandage = 'img/hole.png';
 
     for (let index = 0; index < bandages.length; index += 1) {
       bandages[index].addEventListener('click', function (event) {
