--- a/04-fix-ship-holes/index.html
+++ b/04-fix-ship-holes/index.html
@@ -49,7 +49,7 @@
       width: 60px;
     }
   </style>
-  <title>Fix the ship's holes</title>
+  <title>Repare os buracos no navio</title>
 </head>
 
 <body>
